update the cluster

--- a/gke_provider.yaml
+++ b/gke_provider.yaml
@@ -2,6 +2,6 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: provider-gcp-gke
+  name: provider-gcp-container
 spec:
-  package: xpkg.upbound.io/upbound/provider-gcp-gke:v0.40.0
+  package: xpkg.upbound.io/upbound/provider-gcp-container:v0.41.0
