applied a github workflow

--- a/cluster_XRD.yaml
+++ b/cluster_XRD.yaml
@@ -24,7 +24,9 @@ spec:
               parameters:
                 type: object
                 properties:
-                  location:
+                  clusterName:
+                    type: string
+                  region:
                     type: string
                   machineType:
                     type: string
