--- a/cluster_XR_claim.yaml
+++ b/cluster_XR_claim.yaml
@@ -4,7 +4,8 @@ metadata:
   name: example-gke-cluster
 spec:
   parameters:
-    location: us-east1
+    clusterName: gke-sample
+    region: us-east1
     machineType: e2-small
     nodeCount: 1
   compositionRef:
