--- a/cluster_composition.yaml
+++ b/cluster_composition.yaml
@@ -21,15 +21,18 @@ spec:
             ipAllocationPolicy:
               - {}
             initialNodeCount: 1
-            location: us-central1
+            region: us-central1
             removeDefaultNodePool: true
           writeConnectionSecretToRef:
             name: gke-managed-resources-kubeconfig
             namespace: upbound-system
       patches:
         - type: FromCompositeFieldPath
-          fromFieldPath: "spec.parameters.location"
-          toFieldPath: "spec.forProvider.location"
+          fromFieldPath: "spec.parameters.region"
+          toFieldPath: "spec.forProvider.region"
+        - type: FromCompositeFieldPath
+          fromFieldPath: "spec.parameters.clusterName"
+          toFieldPath: "metadata.labels.cluster_name"
 
     - name: nodepool
       base:
@@ -49,11 +52,14 @@ spec:
             nodeCount: 1
       patches:
         - type: FromCompositeFieldPath
-          fromFieldPath: "spec.parameters.location"
-          toFieldPath: "spec.forProvider.location"
+          fromFieldPath: "spec.parameters.region"
+          toFieldPath: "spec.forProvider.region"
         - type: FromCompositeFieldPath
           fromFieldPath: "spec.parameters.machineType"
           toFieldPath: "spec.forProvider.nodeConfig[0].machineType"
         - type: FromCompositeFieldPath
           fromFieldPath: "spec.parameters.nodeCount"
           toFieldPath: "spec.forProvider.nodeCount"
+        - type: FromCompositeFieldPath
+          fromFieldPath: "spec.parameters.clusterName"
+          toFieldPath: "spec.forProvider.clusterSelector.matchLabels.cluster_name"
