--- a/gke_cluster_managed_resources.yaml
+++ b/gke_cluster_managed_resources.yaml
@@ -11,7 +11,7 @@ spec:
     ipAllocationPolicy:
       - {}
     initialNodeCount: 1
-    location: us-central1
+    region: us-central1
     removeDefaultNodePool: true
   writeConnectionSecretToRef:
     name: gke-managed-resources-kubeconfig
