--- a/.github/workflows/deploy_with_argocd.yaml
+++ b/.github/workflows/deploy_with_argocd.yaml
@@ -32,11 +32,11 @@ jobs:
         sudo chmod +x /usr/local/bin/argocd
 
     - name: Login to Argo CD
-      run: argocd login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USER }} --password ${{ secrets.ARGOCD_PASS }}
+      run: argocd login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USER }} --password ${{ secrets.ARGOCD_PASS }} --grpc-web
 
     - name: Generate Cluster XR Claim
       run: |
-        cat <<EOF > cluster_XR_claim.yaml
+        cat <<EOF > XR_claim.yaml
         apiVersion: compositions.io/v1alpha1
         kind: XCluster
         metadata:
@@ -50,6 +50,7 @@ jobs:
           compositionRef:
             name: gke-cluster-nodepool
         EOF
+        cat XR_claim.yaml
 
     - name: Deploy or Destroy Cluster with Argo CD
       run: |
@@ -63,7 +64,7 @@ jobs:
             --sync-policy automated \
             --upsert \
             --directory-recurse \
-            --file cluster_XR_claim.yaml
+            --file XR_claim.yaml
         elif [ "${{ github.event.inputs.action }}" == "destroy" ]; then
           argocd app delete ${{ github.event.inputs.clusterName }} --cascade
         fi
