--- a/.github/workflows/deploy_with_argocd.yaml
+++ b/.github/workflows/deploy_with_argocd.yaml
@@ -15,6 +15,9 @@ on:
       nodeCount:
         description: 'Node Count'
         required: true
+      repoURLforArgo: 
+        description: 'The URL of the repository for Argo CD to deploy GKE'
+        required: true
       action:
         description: 'Action (create/destroy)'
         required: true
@@ -34,30 +37,30 @@ jobs:
     - name: Login to Argo CD
       run: argocd login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USER }} --password ${{ secrets.ARGOCD_PASS }} --grpc-web
 
-    - name: Generate Cluster XR Claim
-      run: |
-        cat <<EOF > ./Deployments/XR_claim.yaml
-        apiVersion: compositions.io/v1alpha1
-        kind: XCluster
-        metadata:
-          name: ${{ github.event.inputs.clusterName }}
-        spec:
-          parameters:
-            clusterName: ${{ github.event.inputs.clusterName }}
-            region: ${{ github.event.inputs.region }}
-            machineType: ${{ github.event.inputs.machineType }}
-            nodeCount: ${{ github.event.inputs.nodeCount }}
-          compositionRef:
-            name: gke-cluster-nodepool
-        EOF
-        cat XR_claim.yaml
+    # - name: Generate Cluster XR Claim
+    #   run: |
+    #     cat <<EOF > ./Deployments/XR_claim.yaml
+    #     apiVersion: compositions.io/v1alpha1
+    #     kind: XCluster
+    #     metadata:
+    #       name: ${{ github.event.inputs.clusterName }}
+    #     spec:
+    #       parameters:
+    #         clusterName: ${{ github.event.inputs.clusterName }}
+    #         region: ${{ github.event.inputs.region }}
+    #         machineType: ${{ github.event.inputs.machineType }}
+    #         nodeCount: ${{ github.event.inputs.nodeCount }}
+    #       compositionRef:
+    #         name: gke-cluster-nodepool
+    #     EOF
+    #     cat XR_claim.yaml
 
     - name: Deploy or Destroy Cluster with Argo CD
       run: |
         if [ "${{ github.event.inputs.action }}" == "create" ]; then
           argocd app create ${{ github.event.inputs.clusterName }} \
-            --repo https://github.com/samgabrail/crossplane-gke \
-            --path ./Deployments \
+            --repo ${{ github.event.inputs.repoURLforArgo }} \
+            --path . \
             --dest-server https://kubernetes.default.svc \
             --dest-namespace ${{ github.event.inputs.clusterName }} \
             --project default \
