--- a/.github/workflows/deploy_with_argocd.yaml
+++ b/.github/workflows/deploy_with_argocd.yaml
@@ -37,9 +37,15 @@ jobs:
     - name: Login to Argo CD
       run: argocd login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USER }} --password ${{ secrets.ARGOCD_PASS }} --grpc-web
 
+    - name: Login to Argo CD
+      run: |
+        pwd
+        ls -lah
+        whoami
+
     # - name: Generate Cluster XR Claim
     #   run: |
-    #     cat <<EOF > ./Deployments/XR_claim.yaml
+    #     cat <<EOF > XR_claim.yaml
     #     apiVersion: compositions.io/v1alpha1
     #     kind: XCluster
     #     metadata:
