fix github token name

--- a/.github/workflows/deploy_with_argocd.yaml
+++ b/.github/workflows/deploy_with_argocd.yaml
@@ -38,7 +38,7 @@ jobs:
       run: argocd login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USER }} --password ${{ secrets.ARGOCD_PASS }} --grpc-web
 
     - name: Register Repository in Argo CD
-      run: argocd repo add ${{ github.event.inputs.repoURLforArgo }} --username samgabrail --password ${{ secrets.GITHUB_PERSONAL_TOKEN }}
+      run: argocd repo add ${{ github.event.inputs.repoURLforArgo }} --username samgabrail --password ${{ secrets.MYGITHUB_TOKEN }}
 
     - name: Check Directory
       run: |
