fix url for git

--- a/.github/workflows/go_api.yaml
+++ b/.github/workflows/go_api.yaml
@@ -19,13 +19,28 @@ on:
 jobs:
   deploy-api:
     runs-on: ubuntu-latest
+    outputs:
+      cleanRepoURL: ${{ steps.clean_repo.outputs.cleaned_repo_url }}
     steps:
+    - name: Checkout Code
+      uses: actions/checkout@v2
+
+    - name: Clean repo URL
+      id: clean_repo
+      run: |
+        CLEANED_URL="${{ github.event.inputs.repoURLforArgo }}"
+        CLEANED_URL="${CLEANED_URL/https:\/\/}"
+        CLEANED_URL="${CLEANED_URL/.git/}"
+        echo "CLEANED_URL=${CLEANED_URL}" >> $GITHUB_ENV
+        echo "::set-output name=cleaned_repo_url::${CLEANED_URL}"
+
     - name: Checkout Dockerfile Repository
       if: ${{ github.event.inputs.action == 'create' }}
       uses: actions/checkout@v2
       with:
-        repository: ${{ github.event.inputs.repoURLforArgo }}
-        token: ${{ secrets.GITHUB_TOKEN }} # Assuming the repo is within the same GitHub account/organization
+        repository: ${{ steps.clean_repo.outputs.cleaned_repo_url }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 1
 
     - name: Build and Push Docker Image to GHCR
       if: ${{ github.event.inputs.action == 'create' }}
