--- a/.github/workflows/go_api.yaml
+++ b/.github/workflows/go_api.yaml
@@ -78,6 +78,7 @@ jobs:
             --dest-namespace ${{ github.event.inputs.apiName }} \
             --project default \
             --sync-policy automated \
+            --sync-option CreateNamespace=true \
             --upsert \
             --grpc-web
         elif [ "${{ github.event.inputs.action }}" == "destroy" ]; then
