--- a/.github/workflows/go_api.yaml
+++ b/.github/workflows/go_api.yaml
@@ -37,17 +37,15 @@ jobs:
         token: ${{ secrets.MYGITHUB_TOKEN }}
         fetch-depth: 1
 
-    - name: Build and Push Docker Image to GHCR
+    - name: Build and Push Docker Image to Docker Hub
       if: ${{ github.event.inputs.action == 'create' }}
       run: |
-        pwd
-        ls -lah
-        echo ${{ secrets.MYGITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.event.inputs.imageName }}:${{ github.run_id }} .
-        docker tag ghcr.io/${{ github.repository_owner }}/${{ github.event.inputs.imageName }}:${{ github.run_id }} ghcr.io/${{ github.repository_owner }}/${{ github.event.inputs.imageName }}:latest
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.event.inputs.imageName }}:${{ github.run_id }}
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.event.inputs.imageName }}:latest
-
+        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ github.event.inputs.imageName }}:${{ github.run_id }} .
+        docker tag ${{ secrets.DOCKER_USERNAME }}/${{ github.event.inputs.imageName }}:${{ github.run_id }} ${{ secrets.DOCKER_USERNAME }}/${{ github.event.inputs.imageName }}:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/${{ github.event.inputs.imageName }}:${{ github.run_id }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/${{ github.event.inputs.imageName }}:latest
+      
     - name: Checkout Code
       uses: actions/checkout@v2
 
