--- a/.github/workflows/app_destroy.yaml
+++ b/.github/workflows/app_destroy.yaml
@@ -30,12 +30,21 @@ jobs:
       run: |
           argocd app delete ${{ github.event.inputs.apiName }} --cascade --grpc-web -y || true
 
+    # - name: Extract and Construct Repo URL
+    #   id: repo-url
+    #   run: |
+    #     query=${{ github.event.inputs.repoURLforArgo }}
+    #     owner=$(echo "$query" | sed -n 's/.*owner=\([^&]*\).*/\1/p')
+    #     repo=$(echo "$query" | sed -n 's/.*repo=\([^&]*\).*/\1/p')
+    #     echo "Constructed URL: https://github.com/$owner/$repo.git"
+    #     echo "URL=https://github.com/$owner/$repo.git" >> $GITHUB_ENV
+    #     echo "REPO=$repo" >> $GITHUB_ENV
+
     - name: Extract and Construct Repo URL
       id: repo-url
       run: |
-        query=${{ github.event.inputs.repoURLforArgo }}
-        owner=$(echo "$query" | sed -n 's/.*owner=\([^&]*\).*/\1/p')
-        repo=$(echo "$query" | sed -n 's/.*repo=\([^&]*\).*/\1/p')
+        owner=$(echo "${{ github.event.inputs.repoURLforArgo }}" | sed -n 's/.*owner=\([^&]*\).*/\1/p')
+        repo=$(echo "${{ github.event.inputs.repoURLforArgo }}" | sed -n 's/.*repo=\([^&]*\).*/\1/p')
         echo "Constructed URL: https://github.com/$owner/$repo.git"
         echo "URL=https://github.com/$owner/$repo.git" >> $GITHUB_ENV
         echo "REPO=$repo" >> $GITHUB_ENV
