--- a/.github/workflows/go_api.yaml
+++ b/.github/workflows/go_api.yaml
@@ -10,9 +10,11 @@ on:
         description: 'Container Image Name'
         required: true
       repoURLforArgo: 
-        description: 'The URL of the repository for Argo CD to deploy GKE'
+        description: 'The URL of the repository for Argo CD to deploy the GO API'
         required: true
-
+      k8sClusterURLforArgo: 
+        description: 'The URL of the K8s cluster in Argo CD for application deployment'
+        required: true
 jobs:
   deploy-api:
     runs-on: ubuntu-latest
@@ -65,7 +67,7 @@ jobs:
         argocd app create ${{ github.event.inputs.apiName }} \
           --repo ${{ github.event.inputs.repoURLforArgo }} \
           --path ./Deployments \
-          --dest-server https://kubernetes.default.svc \
+          --dest-server ${{ github.event.inputs.k8sClusterURLforArgo }} \
           --dest-namespace ${{ github.event.inputs.apiName }} \
           --project default \
           --sync-policy automated \
